--- a/src/public/index.html
+++ b/src/public/index.html
@@ -1588,7 +1588,7 @@
     </form>
 
   </div>
-  <script type="text/javascript" src="/clientapp/dist/main.bundle.js"></script>
+  <script type="text/javascript" src="./main.bundle.js"></script>
 </body>
 
 </html>
