--- a/src/public/index.html
+++ b/src/public/index.html
@@ -1017,7 +1017,7 @@
             </div>
           </div>
         </div>
-        <div class="section-label naturals">
+        <div class="section-label dry">
           <div class="head-of-list">
             <h1>🍒 פירות יבשים</h1>
           </div>
@@ -1499,96 +1499,273 @@
               </select>
             </div>
           </div>
-          <div class="section-label naturals">
-            <div class="head-of-list">
-              <h1>🍫 נוספים</h1>
+        </div>
+        <div class="section-label extras">
+          <div class="head-of-list">
+            <h1>🍫 נוספים</h1>
+          </div>
+          <div class="list others-list">
+            <div class="list-item list-item" id="list-item-103">
+              <label class="item-label">
+                <input type="checkbox" name="checkbox">
+                <span class="label-text">גומי ומסטיקים מכל הסוגים והגדלים</span>
+              </label>
+              <span class="price">4.9 ש"ח</span>
+              <select class="select-weight">
+                <option value="1"> 100 גר'</option>
+                <option value="2"> 200 גר'</option>
+                <option value="3"> 300 גר'</option>
+                <option value="4"> 400 גר'</option>
+                <option value="5"> 500 גר'</option>
+              </select>
             </div>
-            <div class="list others-list">
-              <div class="list-item list-item" id="list-item-103">
-                <label class="item-label">
-                  <input type="checkbox" name="checkbox">
-                  <span class="label-text">גומי ומסטיקים מכל הסוגים והגדלים</span>
-                </label>
-                <span class="price">4.9 ש"ח</span>
-                <select class="select-weight">
-                  <option value="1"> 100 גר'</option>
-                  <option value="2"> 200 גר'</option>
-                  <option value="3"> 300 גר'</option>
-                  <option value="4"> 400 גר'</option>
-                  <option value="5"> 500 גר'</option>
-                </select>
-              </div>
-              <div class="list-item list-item" id="list-item-104">
-                <label class="item-label">
-                  <input type="checkbox" name="checkbox">
-                  <span class="label-text">שוקולד חלק ישראל בד"ץ</span>
-                </label>
-                <span class="price">7.9 ש"ח</span>
-                <select class="select-weight">
-                  <option value="1"> 100 גר'</option>
-                  <option value="2"> 200 גר'</option>
-                  <option value="3"> 300 גר'</option>
-                  <option value="4"> 400 גר'</option>
-                  <option value="5"> 500 גר'</option>
-                </select>
-              </div>
-              <div class="list-item list-item" id="list-item-105">
-                <label class="item-label">
-                  <input type="checkbox" name="checkbox">
-                  <span class="label-text">בקלאווה וכנאפה במשקל</span>
-                </label>
-                <span class="price">6.9 ש"ח</span>
-                <select class="select-weight">
-                  <option value="1"> 100 גר'</option>
-                  <option value="2"> 200 גר'</option>
-                  <option value="3"> 300 גר'</option>
-                  <option value="4"> 400 גר'</option>
-                  <option value="5"> 500 גר'</option>
-                </select>
-              </div>
-              <div class="list-item list-item" id="list-item-106">
-                <label class="item-label">
-                  <input type="checkbox" name="checkbox">
-                  <span class="label-text">סוגי זיתים שונים שרויים בזמן זית איכותי</span>
-                </label>
-                <span class="price">4.9 ש"ח</span>
-                <select class="select-weight">
-                  <option value="1"> 100 גר'</option>
-                  <option value="2"> 200 גר'</option>
-                  <option value="3"> 300 גר'</option>
-                  <option value="4"> 400 גר'</option>
-                  <option value="5"> 500 גר'</option>
-                </select>
-              </div>
-              <div class="list-item list-item" id="list-item-107">
-                <label class="item-label">
-                  <input type="checkbox" name="checkbox">
-                  <span class="label-text">חליטות תה בטעמים עם סוכר</span>
-                </label>
-                <span class="price">9.9 ש"ח</span>
-                <select class="select-weight">
-                  <option value="1"> 100 גר'</option>
-                  <option value="2"> 200 גר'</option>
-                  <option value="3"> 300 גר'</option>
-                  <option value="4"> 400 גר'</option>
-                  <option value="5"> 500 גר'</option>
-                </select>
-              </div>
-              <div class="list-item list-item" id="list-item-108">
-                <label class="item-label">
-                  <input type="checkbox" name="checkbox">
-                  <span class="label-text">חליטות תה בטעמים בלי סוכר</span>
-                </label>
-                <span class="price">11.9 ש"ח</span>
-                <select class="select-weight">
-                  <option value="1"> 100 גר'</option>
-                  <option value="2"> 200 גר'</option>
-                  <option value="3"> 300 גר'</option>
-                  <option value="4"> 400 גר'</option>
-                  <option value="5"> 500 גר'</option>
-                </select>
-              </div>
+            <div class="list-item list-item" id="list-item-104">
+              <label class="item-label">
+                <input type="checkbox" name="checkbox">
+                <span class="label-text">שוקולד חלב ישראל בד"ץ</span>
+              </label>
+              <span class="price">7.9 ש"ח</span>
+              <select class="select-weight">
+                <option value="1"> 100 גר'</option>
+                <option value="2"> 200 גר'</option>
+                <option value="3"> 300 גר'</option>
+                <option value="4"> 400 גר'</option>
+                <option value="5"> 500 גר'</option>
+              </select>
             </div>
+            <div class="list-item list-item" id="list-item-105">
+              <label class="item-label">
+                <input type="checkbox" name="checkbox">
+                <span class="label-text">בקלאווה וכנאפה במשקל</span>
+              </label>
+              <span class="price">6.9 ש"ח</span>
+              <select class="select-weight">
+                <option value="1"> 100 גר'</option>
+                <option value="2"> 200 גר'</option>
+                <option value="3"> 300 גר'</option>
+                <option value="4"> 400 גר'</option>
+                <option value="5"> 500 גר'</option>
+              </select>
+            </div>
+            <div class="list-item list-item" id="list-item-106">
+              <label class="item-label">
+                <input type="checkbox" name="checkbox">
+                <span class="label-text">סוגי זיתים שונים שרויים בזמן זית איכותי</span>
+              </label>
+              <span class="price">4.9 ש"ח</span>
+              <select class="select-weight">
+                <option value="1"> 100 גר'</option>
+                <option value="2"> 200 גר'</option>
+                <option value="3"> 300 גר'</option>
+                <option value="4"> 400 גר'</option>
+                <option value="5"> 500 גר'</option>
+              </select>
+            </div>
+            <div class="list-item list-item" id="list-item-107">
+              <label class="item-label">
+                <input type="checkbox" name="checkbox">
+                <span class="label-text">חליטות תה בטעמים עם סוכר</span>
+              </label>
+              <span class="price">9.9 ש"ח</span>
+              <select class="select-weight">
+                <option value="1"> 100 גר'</option>
+                <option value="2"> 200 גר'</option>
+                <option value="3"> 300 גר'</option>
+                <option value="4"> 400 גר'</option>
+                <option value="5"> 500 גר'</option>
+              </select>
+            </div>
+            <div class="list-item list-item" id="list-item-108">
+              <label class="item-label">
+                <input type="checkbox" name="checkbox">
+                <span class="label-text">חליטות תה בטעמים בלי סוכר</span>
+              </label>
+              <span class="price">11.9 ש"ח</span>
+              <select class="select-weight">
+                <option value="1"> 100 גר'</option>
+                <option value="2"> 200 גר'</option>
+                <option value="3"> 300 גר'</option>
+                <option value="4"> 400 גר'</option>
+                <option value="5"> 500 גר'</option>
+              </select>
+            </div>
+          </div>
+        </div>
+        <div class="section-label packages">
+          <div class="head-of-list">
+            <h1>🥡 אריזות</h1>
+          </div>
+          <div class="list others-list">
+            <div class="list-item list-item" id="list-item-201">
+              <label class="item-label">
+                <input type="checkbox" name="checkbox">
+                <span class="label-text">פרכיות אורז מלא (כרם)</span>
+              </label>
+              <span class="price">6.9 ש"ח</span>
+              <span></span>
+            </div>
+            <div class="list-item list-item" id="list-item-201">
+              <label class="item-label">
+                <input type="checkbox" name="checkbox">
+                <span class="label-text">פרכיות כוסמת (כרם)</span>
+              </label>
+              <span class="price">8.9 ש"ח</span>
+              <span></span>
+            </div>
+            <div class="list-item list-item" id="list-item-202">
+              <label class="item-label">
+                <input type="checkbox" name="checkbox">
+                <span class="label-text">(כרם) קמח 4 דגנים</span>
+              </label>
+              <span class="price">12.9 ש"ח</span>
+              <span></span>
+            </div>
+            <div class="list-item list-item" id="list-item-203">
+              <label class="item-label">
+                <input type="checkbox" name="checkbox">
+                <span class="label-text">קמח חיטה 70% (כרם)</span>
+              </label>
+              <span class="price">12.9 ש"ח</span>
+              <span></span>
+            </div>
+            <div class="list-item list-item" id="list-item-204">
+              <label class="item-label">
+                <input type="checkbox" name="checkbox">
+                <span class="label-text">קמח חיטה מלא (כרם)</span>
+              </label>
+              <span class="price">12.9 ש"ח</span>
+              <span></span>
+            </div>
+            <div class="list-item list-item" id="list-item-205">
+              <label class="item-label">
+                <input type="checkbox" name="checkbox">
+                <span class="label-text">קמח כוסמין לבן (כרם)</span>
+              </label>
+              <span class="price">12.9 ש"ח</span>
+              <span></span>
+            </div>
+            <div class="list-item list-item" id="list-item-206">
+              <label class="item-label">
+                <input type="checkbox" name="checkbox">
+                <span class="label-text">קמח כוסמין מלא (כרם)</span>
+              </label>
+              <span class="price">12.9 ש"ח</span>
+              <span></span>
+            </div>
+            <div class="list-item list-item" id="list-item-207">
+              <label class="item-label">
+                <input type="checkbox" name="checkbox">
+                <span class="label-text">משקה אורז ושקדים אורגני (כרם)</span>
+              </label>
+              <span class="price">11.9 ש"ח</span>
+              <span></span>
+            </div>
+            <div class="list-item list-item" id="list-item-208">
+              <label class="item-label">
+                <input type="checkbox" name="checkbox">
+                <span class="label-text">משקה שיבולת שועל (כרם)</span>
+              </label>
+              <span class="price">14.9 ש"ח</span>
+              <span></span>
+            </div>
+            <div class="list-item list-item" id="list-item-209">
+              <label class="item-label">
+                <input type="checkbox" name="checkbox">
+                <span class="label-text">
+                  טחינה אורגנית ללא תוספת מלח (כרם)
+                </span>
+              </label>
+              <span class="price">15 ש"ח</span>
+              <span></span>
+            </div>
+            <div class="list-item list-item" id="list-item-210">
+              <label class="item-label">
+                <input type="checkbox" name="checkbox">
+                <span class="label-text">
+                  טחינה אורגנית משומשום מלא ללא תוספת מלח (כרם)
+                </span>
+              </label>
+              <span class="price">15 ש"ח</span>
+              <span></span>
+            </div>
+            <!-- Start Item -->
+            <div class="list-item list-item" id="list-item-211">
+              <label class="item-label">
+                <input type="checkbox" name="checkbox">
+                <span class="label-text">
+                  גרנולה עשירה ללא סוכר (כרם) 444 גר'
+                </span>
+              </label>
+              <span class="price">14.9 ש"ח</span>
+              <span></span>
+            </div>
+            <!-- End Item -->
+            <!-- Start Item -->
+            <div class="list-item list-item" id="list-item-212">
+              <label class="item-label">
+                <input type="checkbox" name="checkbox">
+                <span class="label-text">
+                  גרנולה עם שקדים ללא סוכר (כרם) 444 גר' </span>
+              </label>
+              <span class="price">14.9 ש"ח</span>
+              <span></span>
+            </div>
+            <!-- End Item -->
+            <!-- Start Item -->
+            <div class="list-item list-item" id="list-item-213">
+              <label class="item-label">
+                <input type="checkbox" name="checkbox">
+                <span class="label-text">
+                  ערמונים אורגנים קלופים וקלויים (כרם)</span>
+              </label>
+              <span class="price">14.9 ש"ח</span>
+              <span></span>
+            </div>
+            <!-- End Item -->
+            <!-- Start Item -->
+            <div class="list-item list-item" id="list-item-214">
+              <label class="item-label">
+                <input type="checkbox" name="checkbox">
+                <span class="label-text">
+                  פולי קקאו שלמים אוגרנים 200 גר' (כרם)</span>
+              </label>
+              <span class="price">25 ש"ח</span>
+              <span></span>
+            </div>
+            <!-- End Item -->
+            <!-- Start Item -->
+            <div class="list-item list-item" id="list-item-215">
+              <label class="item-label">
+                <input type="checkbox" name="checkbox">
+                <span class="label-text">
+                  אבקת קקאו אורגנית 200 גר' (כרם)</span>
+              </label>
+              <span class="price">26.2 ש"ח</span>
+              <span></span>
+            </div>
+            <!-- End Item -->
+            <!-- Start Item -->
+            <div class="list-item list-item" id="list-item-216">
+              <label class="item-label">
+                <input type="checkbox" name="checkbox">
+                <span class="label-text">
+                  קמח קוקוס אוגני 500 גר' (כרם)</span>
+              </label>
+              <span class="price">14.9 ש"ח</span>
+              <span></span>
+            </div>
+            <!-- End Item -->
+            <!-- Start Item -->
+            <div class="list-item list-item" id="list-item-217">
+              <label class="item-label">
+                <input type="checkbox" name="checkbox">
+                <span class="label-text">
+                  קמח שקדים 250 גר' (כרם)</span>
+              </label>
+              <span class="price">19.9 ש"ח</span>
+              <span></span>
+            </div>
+            <!-- End Item -->
           </div>
         </div>
       </div>
@@ -1597,4 +1774,5 @@
   </div>
   <script type="text/javascript" src="./main.bundle.js"></script>
 </body>
+
 </html>
